2010-06-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/comm/GDB.HOWTO: Remove more ITRON references.

2010-06-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/irq_asm.S: Fix capitalization.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/irq/irq-config.h: Removed file.
	* shared/irq/irq.h: Moved defines from 'shared/irq/irq-config.h'.

2010-04-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/comm/uart.c, shared/comm/uart.h: Reflect termios API
	changes.

2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1483/cpukit
	* shared/pci/pcibios.c: Rename pci_config into rtems_pci_config_t.

2009-12-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/comm/uart.c, shared/comm/uart.h: Adjust prototypes.

2009-11-10	Till Straumann <strauman@slac.stanford.edu>

	* pc386/make/custom/pc586-sse.cfg, pc386/start/start.S,
	shared/irq/irq_asm.S: Added experimental SSE support.

2009-10-29	Till Straumann <strauman@slac.stanford.edu>

	* shared/irq/irq_asm.S: Make sure stack is aligned to CPU_STACK_ALIGNMENT
	for *all* C-routines (including _Thread_Dispatch() and
	_ThreadProcessSignalsFromIrq()) not only C_dispatch_isr().

	* shared/irq/irq.c: Added IRQ statistics counters.

2009-10-29	Till Straumann <strauman@slac.stanford.edu>

	* shared/irq/irq_asm.S: Beautification; ajusted margins and
	spaces to make the whole thing more readable.

2009-10-29	Till Straumann <strauman@slac.stanford.edu>

	* shared/irq/irq_asm.S, shared/irq/irq.c: removed
	(fake) exception frame argument to _ThreadProcessSignalsFromIrq().
	This has never been used and removing it simplifies the assembly
	code.

2009-10-28	Till Straumann <strauman@slac.stanford.edu>

	* shared/irq/irq_asm.S: Make sure stack is aligned to
	CPU_STACK_ALIGNMENT before invoking C-code.

2009-10-17	Chris Johns <chrisj@rtems.org>

	* shared/irq/idt.c: Check is the irq handlers are present before
	calling.
	* shared/comm/i386-stub-glue.c: Revert the change of 2009-05-06 as